Fix CSS for grid cell collapse
Basically it seems the highchart container (#visualization-container) must be removed from the flow
in order to get the CSS grid to resize the parent container (#canvas).

--- a/packages/app/src/components/App.css
+++ b/packages/app/src/components/App.css
@@ -27,6 +27,7 @@ body {
 }
 .canvas {
     grid-area: canvas;
+    position: relative;
 }
 
 .app * {
